# dmas

./: .gitignore  README.md  article_notes.md  ch1_scratch.py  ch4_scratch.py  openai_test.py  pyproject.toml
src/dmas/: config.py  frameworks.py  prompts.py
src/dmas/ch1/: agentframework_backend.py  agents.py  autogen_backend.py  langgraph_backend.py  main.py  team.py
src/dmas/ch4/: agentframework_backend.py  agents.py  autogen_backend.py  langgraph_backend.py  main.py  tools.py
src/dmas/ch5/: agentframework_backend.py  autogen_backend.py  langgraph_backend.py  main.py  tools.py
src/dmas/ch6/: agentframework_backend.py  autogen_backend.py  langgraph_backend.py  main.py
